css/main.css
html {
  box-sizing: border-box;

  font: normal 100%/1.5 sans-serif;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
  min-width: 320px;
}

.banner {
  background-color: #2b3851;
  width: 100%;
  position: relative;
  padding-top: 4rem;
}

.robot {
  width: 320px;
  margin-left: auto;
  margin-right: auto;
}

/* no position absolute .robot or .robot-body, center justify in a different way */

.robot-body {
  width: 320px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.robot-brain {
  width: 46px;
  position: absolute;
  top: 4rem;
  transform: translate(297%);
}

.robot-head-right,
.robot-head-left {
  width: 125px;
  position: absolute;
  top: 1.5rem;
}

.robot-head-left {
  transform: translateX(28%);
}

.robot-head-right {
  transform: translateX(128%);
}

.robot:hover .robot-head-left {
  transform: translate(-5%, -20%);
}

.robot:hover .robot-head-right {
  transform: translate(160%, -20%);
}

.robot:hover .robot-brain {
  top: 3rem;
}

